@@ -67,10 +67,10 @@ public class GuiViewImpl extends JFrame implements GuiView {
 //    displayPanel.addKeyListener(listener);
 //  }
 
-//  @Override
-//  public void addMouseListener(MouseListener listener) {
-//    displayPanel.addMouseListener(listener);
-//  }
+  @Override
+  public void addMouseListener(MouseListener listener) {
+    displayPanel.addMouseListener(listener);
+  }
 
   @Override
   public void resetFocus() {
